<resources>
    <string name="stringname" translatable="false">"This string doesn't need translation"</string>
    <string name="app_name">SmartGrades</string>
    <string name="mail_or_phone">Телефон или почта</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="enter_your_mail">Введите ваш e-mail</string>
    <string name="enter_your_phone_number">Введите ваш номер телефона</string>
    <string name="mail">email</string>
    <string name="phone_number">Номер телефона</string>
    <string name="who_is_the_account_created_for">Выберите роль аккаунта:</string>
    <string name="parent">Родитель</string>
    <string name="child">Ребенок</string>
    <string name="mentor">Наставник</string>
    <string name="school">Школа</string>
    <string name="sponsor">Спонсор</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="enter_name">Введите ваше имя</string>
    <string name="enter_surname">Введите вашу фамилию</string>
    <string name="what_is_your_name">Как вас зовут?</string>
    <string name="set_an_avatar_for_your_account">Установите аватар для своего аккаунта</string>
    <string name="enter_date_of_birth">Укажите дату рождения</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="create_login">Придумайте логин</string>
    <string name="enter_login">Введите логин</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="create_access">Придумайте код доступа</string>
    <string name="add_child_title">Создать аккаунт для Вашего ребенка?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="enter_full_name_child">Введите имя и фамилию ребенка</string>
    <string name="birthday">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="enter_family_status">Установите семейные статусы</string>
    <string name="your_status_for_child">КЕМ ВЫ ЯВЛЯЕТЕСЬ РЕБЕНКУ?</string>
    <string name="another_family_member">Другое уполномоченное лицо</string>
    <string name="set_an_avator_for_your_child">Установите аватар для аккаунта ребенка</string>
    <string name="hardware_access_title">Предоставление разрешений</string>
    <string name="account_serach">Поиск аккаунта</string>
    <string name="enter_child_name">Введите имя</string>
    <string name="enter_child_surname">Введите фамилию</string>
    <string name="kids">Дети</string>
    <string name="mentors">Менторы</string>
    <string name="add_mentor">Добавить ментора</string>
    <string name="proposal_mentor">Заявка на взаимодействие с ментором </string>
    <string name="ward">Подопечный</string>
    <string name="not_select">Не выбрано</string>
    <string name="tools_integrate">Инструмент взаимодействия</string>
    <string name="tools_interval">Интервал инструмента</string>
    <string name="target">Цель</string>
    <string name="send">Отправить</string>
    <string name="TemporaryСoinsType" translatable="false">TemporaryСoins</string>
    <string name="GadgetTimeType" translatable="false">GadgetTime</string>
    <string name="StepsType" translatable="false">Steps</string>
    <string name="MoneyType" translatable="false">Money</string>
    <string name="TemporaryСoins">Умные оценки = Временные монеты</string>
    <string name="GadgetTime">Умные оценки = Время за геджетом</string>
    <string name="Steps">Умные оценки = Шаги к цели</string>
    <string name="Money">Умные оценки = Деньги</string>
    <string name="money_description">Ребенок может сам "зарабатывать" и тратить свои
деньги, которые Родители ему начисляют или
отнимают за какие-либо действия. </string>
    <string name="money_locked_dialog">Вы уверены,
что хотите отключить
Инструмент "Деньги"?</string>
    <string name="temporary_coins_dialog">Вы действительно хотите выключить
инструмент "Временные монеты"?</string>
    <string name="temporary_coins_dialog_2">Одна монета равна 20 минут работы гаджета.
Если монеты закончатся, то гаджет будет
заблокирован. Чтобы возобновить работу
гаджета, родитель со своего аккаунта может
начислить монеты.

Рекомендуем выдавать монеты ребенку
за какие-либо полезные действия.</string>
    <string name="gadget_time_dialog">Вы уверены,
что хотите отключить
 инструмент "Время за гаджетом"?</string>
    <string name="steps_dialog">Вы уверены,
что хотите отключить
 инструмент "Шаги к цели"?</string>
    <string name="steps_page_bottom_text">После подтверждения формы ребенком
инструмент станет доступным.</string>
    <string name="smart_dialog">Вы уверены,
что хотите отключить
 инструмент "Умные оценки"?</string>
    <string name="exit">Выход</string>
    <string name="coins">Монеты</string>
    <string name="contracts">Контакты</string>
    <string name="current_balance">Текущий баланс</string>
    <string name="min">min</string>
    <string name="h">h.</string>
    <string name="accrual">Начисление</string>
    <string name="you_not_incremented_coins">Вы не увеличили монеты</string>
    <string name="coin_one_min">1 (20 minute)</string>
    <string name="coin_zero_five_min">0,5(10 minute)</string>
    <string name="more_details">подробнее ...</string>
    <string name="go_to_signing">Перейти к подписанию</string>
    <string name="new_contract">Новый контракт</string>
    <string name="contract_execution">Вам необходимо выполнить свою часть контракта.</string>
    <string name="preparation_of_contract">Подготовка договора</string>
    <string name="contract">Контакты</string>
    <string name="select_avatar">Выберите аватар</string>
    <string name="enter_child_purpose">Введите цель ребенка</string>
    <string name="enter_the_number_of_steps">Введите количество шагов</string>
    <string name="contract_signing">Подписание договора</string>
    <string name="congratulations_the_contract_is_concluded">Поздравляю! Заключен договор!</string>
    <string name="remember_to_help_your_child">Не забудьте помочь своему ребенку достичь своей цели.</string>
    <string name="try_credit_to_the_child">Постарайтесь сразу отправиться в путь, ребенок будет отслеживать свои шаги к цели на своем устройстве.</string>
    <string name="to_the_main">На главную</string>
    <string name="print_contract">Распечатать договор</string>
    <string name="cancel_contract">Отменить договор</string>
    <string name="repeat_all_conditions">Повторите все условия. Если ребенок согласен, пусть нажмет соответствующую кнопку.</string>
    <string name="status">Статус</string>
    <string name="avatar">Аватар</string>
    <string name="save">Сохранить</string>
    <string name="change_status">Изменить статус</string>
    <string name="father">Отец</string>
    <string name="mother">Мама</string>
    <string name="daughter">Дочь</string>
    <string name="son">Сын</string>
    <string name="affordable_time_for_children">Доступное время для детей</string>
    <string name="set_time_limits">Установите ограничение по времени, ночной режим (но не более 12 часов.)</string>
    <string name="why_can_i_limit">Почему я могу ограничить его максимум 12 часами в день?</string>
    <string name="disable_all_day_restrictions">Отключить ограничения на целый день</string>
    <string name="cancel">Отмена</string>
    <string name="set_the_interval_for_access">Установите интервал доступа к устройствам, но не менее 10ч.</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_again">Новый пароль еще раз</string>
    <string name="forgotten_password">Если вы забыли пароль, вы можете</string>
    <string name="drop_him">drop him.</string>
    <string name="enter_current_password">Введите текущий пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="enter_new_password_again">Введите новый пароль еще раз</string>
    <string name="current_quick_access_code">Текущий код быстрого доступа</string>
    <string name="new_quick_access_code">Новый код быстрого доступа</string>
    <string name="new_quick_access_code_again">Новый код быстрого доступа</string>
    <string name="enter_current_quick_access_code">Введите текущий код быстрого доступа</string>
    <string name="enter_new_quick_access_code">Введите новый код быстрого доступа</string>
    <string name="enter_new_quick_access_code_again">Введите новый код быстрого доступа еще раз</string>
    <string name="sound_notifications">Звуковые уведомления</string>
    <string name="vibration">Вибрация</string>
    <string name="popup_notifications">Всплывающие уведомления</string>
    <string name="set_the_number_of_coins">Установите количество монет, которое будет списываться автоматически</string>
    <string name="accrual_recommendations">Рекомендации по начислениям</string>
    <string name="disable_all_auto_charges_by_day">Отключить все автоматические списания по дням</string>
    <string name="auto_charge_time">Время автоматической зарядки</string>
    <string name="change_dot">изменение...</string>
    <string name="dialog_title_delete_device">Вы уверены, что хотите удалить устройства?</string>
    <string name="device_deleted_permanently">Устройство будет удалено без возможности восстановления</string>
    <string name="devices_cannot_be_restored">Устройства не подлежат восстановлению</string>
    <string name="devices_removed">Удаленные устройства</string>
    <string name="open_access_for">Открытый доступ для:</string>
    <string name="change_user_to">Измените пользователя на:</string>
    <string name="grant_access">Предоставление доступа:</string>
    <string name="close_access_for_all_children">Закрытый доступ для всех детей</string>
    <string name="open_access_for_all_children">Открытый доступ для всех детей</string>
    <string name="add">Добавить</string>
    <string name="required_fields">* поля обязательные к заполнению</string>
    <string name="ok">Ok</string>
    <string name="add_class">Добавить класс</string>
    <string name="class_name">Название класса*</string>
    <string name="log_out_of_your_account">Вы действительно хотите выйти из аккаунта?</string>
    <string name="logout">Выйти</string>
    <string name="group_name">Название группы</string>
    <string name="no_more_40_char">не более 40 символов</string>
    <string name="lesson_mentor">Предмет (направление) менторства</string>
    <string name="chouse_from_list">Выбрать из списка</string>
    <string name="default1">По умолчанию</string>
    <string name="Select_deposit">Выберите депозит</string>
    <string name="get40_from2">20-дневный (х2)
        Получить 4 через 20 дней</string>
    <string name="get45from4">45-дневный (х4)         Получить 8 через 45 дней</string>
    <string name="change">Изменить</string>
    <string name="Are_you_sure_you_want_to_change_the_application">Вы уверены что хотите изменить заявку?</string>
    <string name="enter_number">Добавьте основной номер телефона</string>
    <string name="email">Эл. почта</string>
    <string name="Last_Name">Фамилия</string>
    <string name="enter_surname_boss">Введите фамилию руководителя</string>
    <string name="enter_name_boss">Введите имя руководителя</string>
    <string name="father_name">Отчество</string>
    <string name="number">Номер телефона</string>
    <string name="enter_main_email">Добавьте основной эл. почту</string>
    <string name="doc2">Паспорт / уд. линости</string>
    <string name="skip">пропустить</string>
    <string name="representative_data">данные представителя</string>
    <string name="enter_father_boss">Введите отчество руководителя</string>
</resources>