<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/Select_deposit"
        android:textColor="@color/purple_background"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get40_from2" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/get45from4" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOk"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="false"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background_white_rectangle"
        android:gravity="center"
        android:text="@string/cancel" />

</LinearLayout>