<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    android:clickable="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTheLeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/representative_data"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepresentative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="(необязательно)"
            android:textAllCaps="true"
            android:textColor="@color/gray_default"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTheLeader"
            app:layout_constraintStart_toEndOf="@+id/tvTheLeader"
            app:layout_constraintTop_toTopOf="@+id/tvTheLeader" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Last_Name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTheLeader" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/enter_surname_boss"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/place_holder"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvLastName"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/enter_name_boss"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/place_holder"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/tvPatronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/father_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <EditText
            android:id="@+id/etPatronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/enter_father_boss"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/place_holder"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvPatronymic"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/number"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvPatronymic"
            app:layout_constraintTop_toBottomOf="@+id/etPatronymic" />

        <EditText
            android:id="@+id/etPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/enter_number"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/place_holder"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvPhone"
            app:layout_constraintTop_toBottomOf="@+id/etPhone1" />

        <EditText
            android:id="@+id/etEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/enter_main_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/place_holder"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvStateRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/doc2"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvStateRegistration">

            <ImageView
                android:id="@+id/ivStateRegistration1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="5dp"
                android:src="@color/white" />

            <ImageView
                android:id="@+id/ivStateRegistration2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:src="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_right_arrow_uncheck_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>