<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/log_out_of_your_account"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_gravity="left|center_vertical"
            android:text="@string/cancel"
            android:layout_marginLeft="50dp"
            android:textSize="12sp"
            android:textColor="@color/blue_sea"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tvExit"
            android:layout_gravity="right|center_vertical"
            android:text="@string/logout"
            android:layout_marginRight="50dp"
            android:textSize="12sp"
            android:textColor="@color/blue_sea"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</LinearLayout>